--- a/app/src/main/res/layout/content_new_map.xml
+++ b/app/src/main/res/layout/content_new_map.xml
@@ -26,16 +26,16 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="date"
-            app:layout_constraintStart_toStartOf="@+id/tvRaceDate"
+            app:layout_constraintStart_toEndOf="@+id/iconRaceDateCalendar"
             app:layout_constraintTop_toBottomOf="@+id/tvRaceDate" />
 
         <EditText
             android:id="@+id/edtMapDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="161dp"
+            android:layout_height="45dp"
             android:ems="10"
             android:inputType="date"
-            app:layout_constraintStart_toStartOf="@+id/tvMapDate"
+            app:layout_constraintStart_toEndOf="@+id/iconMapDateCalendar"
             app:layout_constraintTop_toBottomOf="@+id/tvMapDate" />
 
         <EditText
@@ -64,6 +64,7 @@
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_marginTop="16dp"
+            android:onClick="onImgBtnPhoto"
             app:layout_constraintEnd_toStartOf="@+id/divider2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider"
@@ -146,21 +147,13 @@
             android:id="@+id/divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edtRaceDate" />
-
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
-            android:layout_width="354dp"
-            android:layout_height="205dp"
-            android:layout_marginStart="28dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtLocation" />
 
         <ImageButton
             android:id="@+id/imgBtnLocation"
@@ -176,9 +169,9 @@
             android:id="@+id/divider3"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="@+id/divider"
             app:layout_constraintStart_toStartOf="@+id/divider"
@@ -198,13 +191,48 @@
             app:layout_constraintStart_toStartOf="@+id/tvDistance"
             app:layout_constraintTop_toBottomOf="@+id/tvDistance" />
 
+        <fragment
+            android:id="@+id/mapFragment"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="290dp"
+            android:layout_height="220dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtLocation"
+            tools:context=".presentation.NewMapActivity" />
+
         <ImageView
             android:id="@+id/imageViewMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/mapView"
-            app:layout_constraintTop_toBottomOf="@+id/mapView"
+            android:layout_marginTop="256dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/mapFragment"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <ImageView
+            android:id="@+id/iconRaceDateCalendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/tvRaceDate"
+            app:layout_constraintTop_toBottomOf="@+id/tvRaceDate"
+            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+
+        <ImageView
+            android:id="@+id/iconMapDateCalendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/tvMapDate"
+            app:layout_constraintTop_toBottomOf="@+id/tvMapDate"
+            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+
+        <ImageView
+            android:id="@+id/imgViewDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="DeleteMapImgage"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider3"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
