--- a/app/src/main/res/layout/activity_maps_list.xml
+++ b/app/src/main/res/layout/activity_maps_list.xml
@@ -13,6 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarEditNewMap" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
