3/3/2021 Subida desde el otro PC Pantalla del mapa de google para mostrar los mapas. Mejoras generales en las pantallas de mapas. Listado de mapas separado por líneas.

--- a/app/src/main/res/layout/activity_edit_map.xml
+++ b/app/src/main/res/layout/activity_edit_map.xml
@@ -166,7 +166,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtRaceDate"
-        tools:context=".presentation.NewMapActivity" />
+        tools:context=".presentation.EditMapActivity" />
 
 
 
