--- a/app/src/main/res/layout/content_new_map.xml
+++ b/app/src/main/res/layout/content_new_map.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="64dp"
             android:ems="10"
             android:hint="Nombre"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textCapWords"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
