--- a/app/src/main/res/layout/activity_photo_view.xml
+++ b/app/src/main/res/layout/activity_photo_view.xml
@@ -10,6 +10,7 @@
         android:id="@+id/img_map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"/>
+        android:background="#000000"
+        android:scaleType="centerInside" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
