--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/login_option"
+        android:orderInCategory="5"
+        android:title="Login"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/export_option"
         android:orderInCategory="5"
         android:title="Exportar"
